samples/_failures_safe/1761398881_89a464_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9739ebf.c: In function ‘main’:
./samples/SAFE/__tmp_b9739ebf.c:146:24: error: expected declaration or statement at end of input
  146 |                        logs[i].message);
      |                        ^~~~
./samples/SAFE/__tmp_b9739ebf.c:146:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b9739ebf.c:146:24: error: expected declaration or statement at end of input
